# anolis-brain-interface

./: .gitignore  Concept.md  LICENCE-MIT  README.md
doc/: ComponentWeights.md  DataFormat.md  PowerConsumption.md  PowerSupply.md  Questions.md  RHD2216.md  Report-2023-11-09.md  Throughput.md  data2csv.js
doc/power-traces/: convert.js  data.csv  plot.R  trace.js
firmware/: Cargo.toml  README.md  flash-softdevice.sh  rust-toolchain.toml
firmware/ble-service/: Cargo.toml
firmware/ble-service/src/: adv_data.rs  lib.rs
firmware/brain-interface/: Cargo.toml  memory.x
firmware/brain-interface/src/: main.rs  rhd2216.rs
firmware/data-channel/: Cargo.toml
firmware/data-channel/src/: l2cap_error.rs  lib.rs  packet.rs
firmware/dongle/: Cargo.toml  memory.x
firmware/dongle/src/: adv_data.rs  gatt_client_error.rs  main.rs  webusb.rs
firmware/s140-7.3.0/: s140.elf
frontend/: README.md  icons.js  index.html  plot.js  script.js  style.css
main-firmware/: Cargo.toml  build.rs  memory.x  rust-toolchain.toml
main-firmware/.cargo/: config.toml
main-firmware/src/: main.rs  rhd2216.rs
pcb/: README.md  anolis-brain-interface.kicad_pcb  anolis-brain-interface.kicad_prl  anolis-brain-interface.kicad_pro  anolis-brain-interface.kicad_sch  fp-info-cache  fp-lib-table  ibom.config.ini  sym-lib-table
pcb/lib/: intan.kicad_sym  sd.kicad_sym  setebos.kicad_sym  tps61099.kicad_sym  tps709.kicad_sym
pcb/lib/intan.pretty/: QFN-56-EP.kicad_mod  QFN-56.kicad_mod
pcb/lib/sd.pretty/: 475710001.kicad_mod
pcb/lib/setebos.pretty/: setebos-no-drc.kicad_mod  setebos.kicad_mod  setebos.stp
pcb/lib/zero-hachi.pretty/: 214721-0020.kicad_mod  214721-0020.stp
pcb/releases/v0.1.0/: anolis-brain-interface-ibom.html  anolis-brain-interface.kicad_pcb
